Fix alignment issues on Windows
Close #54

--- a/styles/icons/preview.less
+++ b/styles/icons/preview.less
@@ -10,6 +10,10 @@
         font-size: 22px;
         top:6px;
         margin-right: 10px;
+
+        .platform-win32 & {
+          margin-top: 12px;
+        }
       }
     }
     &.selected {
