--- a/styles/icons/tabs.less
+++ b/styles/icons/tabs.less
@@ -11,6 +11,10 @@
     margin-left: -22px;
     margin-top: 10px;
     position: absolute;
+
+    .platform-win32 & {
+      margin-top: 18px;
+    }
   }
 
   // IGNORED FILES
